# Weepin

./: .clang-format  .clang-tidy  .clangd  .gitignore  Justfile  README.md  flake.nix  meson.build  meson_options.txt
docs/: faq.md
docs/spec/0.1/: functional.md  technical.md
docs/spec/0.1.0/: functional.md
nix/: shells.nix  treefmt.nix
nix/bundled-libs/: default.nix
nix/bundled-libs/cpptrace/: cpptrace.pc  default.nix
nix/bundled-libs/libassert/: default.nix  libassert.pc
nix/bundled-libs/libdwarf/: default.nix
nix/bundled-libs/tl-expected/: default.nix  expected.pc
nix/bundled-libs/tl-optional/: default.nix  optional.pc
nix/shell/: clang.nix  default.nix  gcc.nix
projects/: meson.build
projects/weepin/: meson.build
projects/weepin-core/: meson.build
projects/weepin-core/include/weepin-core/: hello.hpp  prelude.hpp
projects/weepin-core/include/weepin-core/typing/: id.hpp  lift.hpp
projects/weepin-core/src/weepin-core/: greet.hpp  hello.cpp
projects/weepin/src/: main.cpp
projects/weepin/src/weepin/: main.cpp
